// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";
package terraform.schema;

// Schema describes a schema for an instance of a particular object, such as
// a resource type or a provider's overall configuration.
message Schema {
    // Block is the top level configuration block for this schema.
    Block block = 1;

    message Block {
        repeated Attribute attributes = 1;
        repeated NestedBlock block_types = 2;
        DocString description = 3;
        bool deprecated = 4;
    }

    message Attribute {
        string name = 1;
        bytes type = 2;
        Object nested_type = 10;
        DocString description = 3;
        bool required = 4;
        bool optional = 5;
        bool computed = 6;
        bool sensitive = 7;
        bool deprecated = 8;
    }

    message NestedBlock {
        enum NestingMode {
            INVALID = 0;
            SINGLE = 1;
            LIST = 2;
            SET = 3;
            MAP = 4;
            GROUP = 5;
        }

        string type_name = 1;
        Block block = 2;
        NestingMode nesting = 3;
    }

    message Object {
        enum NestingMode {
            INVALID = 0;
            SINGLE = 1;
            LIST = 2;
            SET = 3;
            MAP = 4;
        }

        repeated Attribute attributes = 1;
        NestingMode nesting = 3;
    }

    message DocString {
        string description = 1;
        Format format = 2;

        enum Format {
            PLAIN = 0;
            MARKDOWN = 1;
        }
    }
}
